--- a/settings.json
+++ b/settings.json
@@ -13,5 +13,5 @@
     "workbench.startupEditor": "none",
     "terminal.integrated.enableMultiLinePasteWarning": "never",
     "explorer.confirmDelete": false,
-    "explorer.confirmDragAndDrop": false,
+    "explorer.confirmDragAndDrop": false
 }
