--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,9 @@
 {
-    "workbench.colorTheme": "Theme Darker",
     "files.autoSave": "afterDelay",
     "editor.mouseWheelZoom": true,
-    "editor.fontSize": 20,
+    "editor.fontSize": 18,
     "terminal.integrated.fontSize": 18,
-    "editor.fontFamily": "cascadia code, Consolas, 'Courier New', monospace",
+    // "editor.fontFamily": "cascadia code, Consolas, 'Courier New', monospace",
     "editor.fontWeight": "bold",
     "editor.stickyScroll.enabled": false,
     "editor.minimap.enabled": false,
@@ -22,5 +21,8 @@
     },
     "workbench.iconTheme": "material-icon-theme",
     "workbench.secondarySideBar.defaultVisibility": "hidden",
-    "editor.formatOnPaste": true
+    "editor.formatOnPaste": true,
+    "editor.wordWrap": "on",
+    "workbench.colorTheme": "Theme Darker",
+    "editor.cursorSmoothCaretAnimation": "on"
 }
